<resources>
    <string name="app_name">Help desk</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Help desk</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tickets_list">tickets_list</string>
    <string name="preference_file_key">sharedPrefKey</string>
    <string name="got_it">Got it !</string>
    <string name="menu_edit_ticket">Edit ticket</string>
    <string name="add_ticket">add ticket</string>
    <string name="add_project">add project</string>
    <string name="menu_projects_list">projects list</string>
    <string name="menu_edit_project">Edit project</string>
    <string name="add_ticket_title">Add ticket</string>
    <string name="menu_users_list">Manage users</string>
    <string name="menu_edit_user">add user</string>
    <string name="add_user">Add user</string>
    <string name="add_task">Add task</string>
    <string name="menu_edit_task">Edit task</string>
    <string name="menu_manage_tasks">manage tasks</string>
    <string name="user_role">Role:</string>
    <string name="stats_title">Statistics</string>
    <string name="profile_title">my profile</string>
    <string name="assign_to">Assigned to</string>
    <string name="isDone">is done</string>
    <string name="done">done</string>
    <string name="not_done">pending</string>
    <string-array name="roles">
        <item>Admin</item>
        <item>Support agent</item>
        <item>Project manager</item>
        <item>Manager</item>

    </string-array>
</resources>